# BlockingFocus

./: README.md
3D/: BF.3mf
Code/: CMakeLists.txt  README.md  bf_build.bat  partitions.csv  sdkconfig  sdkconfig.defaults
Code/LOGO/: ico_to_c_array.py  icons_preview.html
Code/components/bf_battery/: CMakeLists.txt
Code/components/bf_battery/include/: bf_battery.h
Code/components/bf_battery/src/: bf_battery.c
Code/components/bf_display/: CMakeLists.txt
Code/components/bf_display/include/: bf_display.h
Code/components/bf_display/src/: bf_display.c
Code/components/bf_face_detector/: CMakeLists.txt
Code/components/bf_face_detector/include/: bf_face_detector.h
Code/components/bf_face_detector/src/: bf_face_detector.c
Code/components/bf_lis3dsh/: CMakeLists.txt
Code/components/bf_lis3dsh/include/: bf_lis3dsh.h
Code/components/bf_lis3dsh/src/: bf_lis3dsh.c
Code/components/bf_pins/: CMakeLists.txt
Code/components/bf_pins/include/: pins.h
Code/components/bf_power/: CMakeLists.txt
Code/components/bf_power/include/: bf_power.h
Code/components/bf_power/src/: bf_power.c
Code/components/bf_secure_store/: CMakeLists.txt
Code/components/bf_secure_store/include/: bf_secure_store.h
Code/components/bf_secure_store/src/: bf_secure_store.c
Code/components/bf_timer_engine/: CMakeLists.txt
Code/components/bf_timer_engine/include/: bf_timer_engine.h
Code/components/bf_ui/: CMakeLists.txt
Code/components/bf_vibration/: CMakeLists.txt
Code/main/: CMakeLists.txt  main.c
Code/ota/: manifest.json
KiCad_PCB/: BF.kicad_pcb
(+24 files in other folders)
